# cpp-game-of-life-oop

./: CMakeLists.txt  GUI.cpp  GUI.h  LICENSE  README.md  Slider.cpp  Slider.h  main.cpp
